--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "webpack",
+  "name": "x_webpack",
   "version": "1.0.0",
   "description": "Webpack4.0\r #第一步初始化一个package.json的文件\r ### npm init -y",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build":"npx webpack"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,16 @@
   "bugs": {
     "url": "https://github.com/xuyane/webpack/issues"
   },
-  "homepage": "https://github.com/xuyane/webpack#readme"
+  "homepage": "https://github.com/xuyane/webpack#readme",
+  "devDependencies": {
+    "css-loader": "^3.0.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.34.0",
+    "webpack-cli": "^3.3.4"
+  },
+  "dependencies": {
+    "lodash": "^4.17.11"
+  }
 }
